# pytooltemplate

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
snap/: snapcraft.yaml
tests/: conftest.py  requirements.txt  test_cli.py  test_tool.py
tool/: __init__.py  cli.py  config.py  config_default.yaml  logging.py
